# RL-Cache

./: .gitignore  CMakeLists.txt  build_plots.py  collect_statistics.py  example_data_generator.py  gather_data.sh  gen_data.py  graphs_auxiliary.py  test.py  train.py
caching_classes/: AdaptSizeSim.cpp  AdaptSizeSim.h  CacheSim.cpp  CacheSim.h  LRUSim.cpp  LRUSim.h
configuration_info/: config_sanity.py  filestructure.py
environment/: environment.py  environment_aux.py  model.py  torch_model.py
experiments/example/: test.json  train.json
experiments/us_web/: statistics.json  train.json
feature/: extractor.py
